--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New event</h1>
 
-<%= render 'form' %>
+<div class="jumbotron">
+  <%= render 'form' %>
+</div>
 
 <%= link_to 'Back', events_path %>
