--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
 <% end %>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
-<%= yield %>
+
+<%= render '/layouts/navbar' %>
+
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
