--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -4,9 +4,12 @@ p#notice= notice
     = @event.name
     | &nbsp;
     = link_to 'Edit', edit_event_path(@event), class: 'btn btn-primary' if can? :update, @event
+  .col-md-2
+    = link_to @event.qrcode(500), target: '_blank'
+     = image_tag @event.qrcode(100), width: 75, height: 75
 .row
   .col-md-6 #{@event.startdate.to_s(:long)} - #{@event.enddate.to_s(:long)}
-  .col-md-6.text-right #{shortcode_url @event.shortcode}
+  .col-md-6.text-right= link_to shortcode_url(@event.shortcode), shortcode_url(@event.shortcode)
 br
 table.table.table-hover
   tbody
