Changed button_to to link_to to force GET

--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,4 +1,4 @@
-= button_to 'New Event', new_event_path, class: 'btn btn-default' if can? :create, Event
+= link_to 'New Event', new_event_path, class: 'btn btn-default' if can? :create, Event
 br
 .jumbotron
   table.table
