Back button goes back to parent event

--- a/app/views/lines/_form.html.slim
+++ b/app/views/lines/_form.html.slim
@@ -18,3 +18,4 @@
     = f.select :room, @rooms.map { |room| [room.name,room.id] }, {}, { class: 'form-control' }
   .form-group
     = f.submit 'Submit', class: 'btn btn-default'
+  = link_to 'Back', event_path(@event)
