Renamed Line#length to Line#line_length

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -35,4 +35,4 @@ br
         - @event.lines.each do |line|
           tr
             td= line.name
-            td= (line.length / line.room.capacity) * 100
+            td= (line.line_length / line.room.capacity) * 100
