--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -4,8 +4,8 @@
     | &nbsp;
     = link_to 'Edit', edit_event_path(@event), class: 'btn btn-primary' if can? :update, @event
   .col-md-2
-    = link_to qrcode(url: event_path, size: 500), target: '_blank'
-     = image_tag qrcode(url: event_path, size: 100), width: 75, height: 75
+    = link_to qrcode(url: event_url, size: 500), target: '_blank'
+     = image_tag qrcode(url: event_url, size: 100), width: 75, height: 75
 .row
   .col-md-6 #{@event.startdate.to_s(:long)} - #{@event.enddate.to_s(:long)}
   .col-md-6.text-right= link_to shortcode_url(@event.shortcode), shortcode_url(@event.shortcode)
